--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.1.6",
     "multer": "^1.4.4",
     "node-fetch": "^3.1.1",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "stripe": "^8.219.0"
