--- a/package.json
+++ b/package.json
@@ -4,5 +4,14 @@
   "main": "index.js",
   "repository": "https://github.com/Theo-Wall/kmaxjewellery.git",
   "author": "Theo-Wall <theo.wall@propra.ca>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "install": "npm run install-client && npm run install-server",
+    "build": "npm run build-client",
+    "start": "npm run start-server",
+    "install-client": "cd client && npm install && cd ..",
+    "install-server": "cd server && npm install && cd ..",
+    "build-client": "cd client && npm run build && cd ..",
+    "start-server": "cd server && npm start && cd .."
+  }
 }
